@@ -16,6 +16,7 @@ import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.nio.charset.StandardCharsets;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map.Entry;
@@ -27,10 +28,14 @@ import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
 import org.assertj.core.api.AutoCloseableSoftAssertions;
+import org.assertj.core.api.SoftAssertions;
+import org.assertj.core.api.junit.jupiter.InjectSoftAssertions;
+import org.assertj.core.api.junit.jupiter.SoftAssertionsExtension;
 import org.assertj.core.util.Files;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
 
@@ -41,6 +46,7 @@ import aQute.bnd.build.ProjectLauncher.NotificationType;
 import aQute.bnd.build.ProjectTester;
 import aQute.bnd.build.Run;
 import aQute.bnd.build.Workspace;
+import aQute.bnd.header.Parameters;
 import aQute.bnd.osgi.Constants;
 import aQute.bnd.osgi.Domain;
 import aQute.bnd.osgi.Jar;
@@ -51,15 +57,20 @@ import aQute.bnd.test.jupiter.InjectTemporaryDirectory;
 import aQute.lib.io.IO;
 import aQute.lib.strings.Strings;
 import aQute.libg.command.Command;
+import biz.aQute.launcher.LauncherTest.ArgumentRendering;
 import biz.aQute.resolve.Bndrun;
 
+@ExtendWith(SoftAssertionsExtension.class)
 public class AlsoLauncherTest {
 	@InjectTemporaryDirectory
 	File				testDir;
 
-	private Workspace			workspace;
-	private Project				project;
-	private Properties			prior;
+	@InjectSoftAssertions
+	SoftAssertions		softly;
+
+	private Workspace	workspace;
+	private Project		project;
+	private Properties	prior;
 
 	@BeforeEach
 	public void setUp() throws Exception {
@@ -141,7 +152,7 @@ public class AlsoLauncherTest {
 
 		try (Jar jar = new Jar(run)) {
 			jar.getResources()
-			.forEach((k, v) -> assertThat(k).startsWith("test/"));
+				.forEach((k, v) -> assertThat(k).startsWith("test/"));
 		}
 	}
 
@@ -150,9 +161,8 @@ public class AlsoLauncherTest {
 		project.setProperty("-resourceonly", "true");
 		project.setProperty("-includeresource", "hello;literal=true");
 
-		project.setProperty("-export",
-			"x.bndrun;type=bnd.runbundles;name=runbundles.jar;template=" + project.getBase()
-				.getAbsolutePath() + "/testresources/biz.aQute.launcher-4.1.0.jar");
+		project.setProperty("-export", "x.bndrun;type=bnd.runbundles;name=runbundles.jar;template=" + project.getBase()
+			.getAbsolutePath() + "/testresources/biz.aQute.launcher-4.1.0.jar");
 		File file = project.getFile("generated/demo.jar");
 		file.delete();
 		assertThat(file).doesNotExist();
@@ -213,7 +223,7 @@ public class AlsoLauncherTest {
 
 		try (Jar jar = new Jar(run)) {
 			jar.getResources()
-			.forEach((k, v) -> assertThat(k).startsWith("org.apache"));
+				.forEach((k, v) -> assertThat(k).startsWith("org.apache"));
 		}
 	}
 
@@ -478,22 +488,139 @@ public class AlsoLauncherTest {
 	@Test
 	public void testExpandedJarLauncher() throws Exception {
 		project.setProperty(Constants.RUNPROPERTIES, "test.cmd=quit.no.exit");
+		File temporaryFolder = new File(testDir, "executable");
 		ProjectLauncher l = project.getProjectLauncher();
-		File temporaryFolder = Files.newTemporaryFolder();
-		try {
-			try (Jar executable = l.executable()) {
-				executable.writeFolder(temporaryFolder);
+		try (Jar executable = l.executable()) {
+			executable.writeFolder(temporaryFolder);
+		}
+		try (URLClassLoader loader = new URLClassLoader(new URL[] {
+			temporaryFolder.toURI()
+				.toURL()
+		}, null)) {
+			Class<?> launcher = loader.loadClass("aQute.launcher.pre.EmbeddedLauncher");
+			Method method = launcher.getMethod("main", String[].class);
+			method.invoke(null, (Object) new String[0]);
+		}
+	}
+
+	static Pattern JAVACMD = Pattern.compile("java (.*) aQute.launcher.pre.EmbeddedLauncher([^\\n]*)$");
+
+	@Test
+	public void expandedJarLauncher_rendersVMAndProgramArgs() throws Exception {
+		project.setProperty("-runvm.test1", "-Dfoo=\"xyz abc\"");
+		project.setProperty("-runvm.test2",
+			"-Dbar=xyz abc, --add-opens=something, -Dlauncherer.properties=C:\\Users\\bj hargrave\\git\\bnd\\bndtools.core\\generated\\launch7354374140259840283.properties");
+		project.setProperty("-runprogramargs.test1", "123\\456");
+		project.setProperty("-runprogramargs.test2", "234, sdfs");
+
+		Parameters hdr = project.getMergedParameters(Constants.RUNVM);
+		List<String> expectedArgs = new ArrayList<>();
+		expectedArgs.add("-cp");
+		expectedArgs.add(".");
+		expectedArgs.addAll(hdr.keyList());
+
+		List<String> expectedProgramArgs = project.getMergedParameters(Constants.RUNPROGRAMARGS)
+			.keyList();
+
+		File temporaryFolder = new File(testDir, "executable");
+		ProjectLauncher l = project.getProjectLauncher();
+		try (Jar executable = l.executable()) {
+			executable.writeFolder(temporaryFolder);
+			final File start = new File(temporaryFolder, "start");
+			softly.assertThat(start)
+				.as("start")
+				.exists();
+			if (softly.wasSuccess()) {
+				String startContent = Files.contentOf(start, "UTF-8");
+				Matcher m = JAVACMD.matcher(startContent);
+				if (m.find()) {
+					final String vmArgs = m.group(1);
+					final String programArgs = m.group(2);
+					softly.assertThat(ArgumentRendering.parseArgumentsImpl(vmArgs, false))
+						.as("unix:vmArgs")
+						.containsExactlyElementsOf(expectedArgs);
+					softly.assertThat(programArgs)
+						.as("unix:progArgs")
+						.startsWith(" ");
+					softly.assertThat(ArgumentRendering.parseArgumentsImpl(programArgs.trim(), false))
+						.as("unix:trimmedProgramArgs")
+						.containsExactlyElementsOf(expectedProgramArgs);
+				} else {
+					softly.fail("unix: File content <%s> didn't match %s", startContent, JAVACMD);
+				}
 			}
-			try (URLClassLoader loader = new URLClassLoader(new URL[] {
-				temporaryFolder.toURI()
-					.toURL()
-			}, null)) {
-				Class<?> launcher = loader.loadClass("aQute.launcher.pre.EmbeddedLauncher");
-				Method method = launcher.getMethod("main", String[].class);
-				method.invoke(null, (Object) new String[0]);
+			final File startBat = new File(temporaryFolder, "start.bat");
+			softly.assertThat(startBat)
+				.as("start.bat")
+				.exists();
+			if (softly.wasSuccess()) {
+				String startContent = Files.contentOf(startBat, "UTF-8");
+				Matcher m = JAVACMD.matcher(startContent);
+				if (m.find()) {
+					final String vmArgs = m.group(1);
+					final String programArgs = m.group(2);
+					softly.assertThat(ArgumentRendering.parseArgumentsWindows(vmArgs, false))
+						.as("windows:vmArgs")
+						.containsExactlyElementsOf(expectedArgs);
+					softly.assertThat(programArgs)
+						.as("windows:progArgs")
+						.startsWith(" ");
+					softly.assertThat(ArgumentRendering.parseArgumentsWindows(programArgs.trim(), false))
+						.as("windows:trimmedProgramArgs")
+						.containsExactlyElementsOf(expectedProgramArgs);
+				} else {
+					softly.fail("windows: File content <%s> didn't match %s", startContent, JAVACMD);
+				}
 			}
-		} finally {
-			IO.delete(temporaryFolder);
+		}
+	}
+
+	@Test
+	public void expandedJarLauncher_handlesEmptyVMAndProgramArgs() throws Exception {
+		File temporaryFolder = new File(testDir, "executable");
+		ProjectLauncher l = project.getProjectLauncher();
+		try (Jar executable = l.executable()) {
+			executable.writeFolder(temporaryFolder);
+			final File start = new File(temporaryFolder, "start");
+			softly.assertThat(start)
+				.as("start")
+				.exists();
+			if (softly.wasSuccess()) {
+				String startContent = Files.contentOf(start, "UTF-8");
+				Matcher m = JAVACMD.matcher(startContent);
+				if (m.find()) {
+					final String vmArgs = m.group(1);
+					final String programArgs = m.group(2);
+					softly.assertThat(vmArgs.trim())
+						.as("unix:vmArgs")
+						.isEqualTo("-cp .");
+					softly.assertThat(programArgs.trim())
+						.as("unix:progArgs")
+						.isEmpty();
+				} else {
+					softly.fail("unix: File content <%s> didn't match %s", startContent, JAVACMD);
+				}
+			}
+			final File startBat = new File(temporaryFolder, "start.bat");
+			softly.assertThat(startBat)
+				.as("start.bat")
+				.exists();
+			if (softly.wasSuccess()) {
+				String startContent = Files.contentOf(startBat, "UTF-8");
+				Matcher m = JAVACMD.matcher(startContent);
+				if (m.find()) {
+					final String vmArgs = m.group(1);
+					final String programArgs = m.group(2);
+					softly.assertThat(vmArgs.trim())
+						.as("windows:vmArgs")
+						.isEqualTo("-cp .");
+					softly.assertThat(programArgs.trim())
+						.as("windows:progArgs")
+						.isEmpty();
+				} else {
+					softly.fail("windows: File content <%s> didn't match %s", startContent, JAVACMD);
+				}
+			}
 		}
 	}
 
